--- a/picker.html
+++ b/picker.html
@@ -234,7 +234,7 @@ button.disabled:hover {
 'use strict';
 
 var items = [
-    // Define your items here
+    {id: 'phoenix', name: 'Phoenix Wright'}
 ];
 
 var myPicker = new picker.Picker({
