--- a/picker.html
+++ b/picker.html
@@ -234,7 +234,9 @@ button.disabled:hover {
 'use strict';
 
 var items = [
-    {id: 'phoenix', name: 'Phoenix Wright'}
+    {id: 'obiwan', name: 'Obi-Wan Kenobi'}
+    {id: 'anakin', name: 'Anakin Skywalker'}
+    {id: 'vader', name: 'Darth Vader'}
 ];
 
 var myPicker = new picker.Picker({
