--- a/picker.html
+++ b/picker.html
@@ -235,7 +235,7 @@ button.disabled:hover {
 
 var items = [
     {id: 'obiwan', name: 'Obi-Wan Kenobi'}
-    {id: 'anakin', name: 'Anakin Skywalker'}
+    {id: 'askywalker', name: 'Anakin Skywalker'}
     {id: 'vader', name: 'Darth Vader'}
 ];
 
